# resource-registry

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
cdk/: README.md  app.py  pyproject.toml  resource_names.pickle
cdk/tests/registry/: test_output_registry.py
resource_registry/: cdk.py  registry.py  serialization.py
tests/: test_register_name.py  test_registry.py  test_retrieve_name.py
