[tool.poetry]
name = "resource-registry"
version = "0.1.0"
description = "creating, serializing and retrievie IaC resource ids"
authors = ["Martijn Sturm <martijn.sturm@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "resource_registry"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
