[tool.poetry]
name = "resource-registry"
version = "0.1.0"
description = "creating, serializing and retrievie IaC resource ids"
authors = ["Martijn Sturm <martijn.sturm@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "resource_registry"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pre-commit = "^3.2.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
